<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/layout_white_background"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="@dimen/payment_sub_frame_padding"
        android:paddingRight="@dimen/payment_sub_frame_padding"
        android:paddingTop="@dimen/payment_sub_frame_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_stop_service_we_will_stop_service" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_stop_service_confirm_content_stop_service" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="6dp"
            android:lineSpacingExtra="4dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_12sp"
            android:background="@drawable/textview_white_background"
            android:text="@string/user_stop_service_contract" />

        <CheckBox
            android:id="@+id/user_stop_service_agree_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_text_margin_top"
            android:checked="false"
            android:text="@string/user_stop_service_agree_stop_service"
            android:theme="@style/Eni.Login.CheckBox.ShowPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/user_stop_service_back_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/history_frame_margin"
            android:layout_marginLeft="@dimen/history_frame_margin"
            android:layout_marginRight="@dimen/history_frame_margin"
            android:layout_marginStart="@dimen/history_frame_margin"
            android:foreground="@drawable/button_foreground">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_apply_for_prepayment_height"
                android:layout_gravity="center"
                android:background="@drawable/button_back"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/history_reload_screen_text" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/user_stop_service_next_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/history_frame_margin"
            android:layout_marginLeft="@dimen/history_frame_margin"
            android:layout_marginRight="@dimen/history_frame_margin"
            android:layout_marginStart="@dimen/history_frame_margin"
            android:layout_marginTop="8dp"
            android:foreground="@drawable/button_foreground">

            <Button
                android:id="@+id/user_stop_service_next_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_apply_for_prepayment_height"
                android:layout_gravity="center"
                android:enabled="false"
                android:background="@drawable/button_user_update_information_update"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/user_stop_service_next"
                android:textColor="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="@dimen/payment_frame_margin"
            android:includeFontPadding="false"
            android:text="@string/login_copyright"
            android:textSize="@dimen/text_10sp" />
    </LinearLayout>

</FrameLayout>
