<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_back_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:drawableLeft="@drawable/ic_back"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_back"
                android:padding="4dp"
                android:text="@string/back"
                android:textColor="#223092"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/toolbar_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/user_reset_password_via_email_title"
                android:textColor="@color/toolbar_title"
                android:textSize="@dimen/text_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/login_frame_inform_user_margin_bottom"
        android:layout_marginEnd="@dimen/login_frame_inform_user_margin"
        android:layout_marginLeft="@dimen/login_frame_inform_user_margin"
        android:layout_marginRight="@dimen/login_frame_inform_user_margin"
        android:layout_marginStart="@dimen/login_frame_inform_user_margin"
        android:layout_marginTop="@dimen/login_frame_inform_user_margin"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_white_background"
            android:orientation="vertical"
            android:padding="@dimen/login_frame_inform_user_padding"
            tools:ignore="UselessParent">

            <TextView
                style="@style/Eni.Login.TextView12sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/user_reset_password_via_email_register_your_email" />

            <TextView
                style="@style/Eni.Login.TextView12sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/user_reset_password_via_email_update_user_info_title" />

            <TextView
                style="@style/Eni.Login.TextView12sp"
                android:layout_marginTop="16dp"
                android:text="@string/login_company_id" />

            <EditText
                android:id="@+id/user_reset_password_via_email_company_code_editText"
                style="@style/Eni.Login.EditText.Text15sp"
                android:layout_height="@dimen/login_edittext_height"
                android:hint="@string/login_id_hint"
                android:inputType="text"
                tools:ignore="TextFields" />

            <TextView
                style="@style/Eni.Login.TextView12sp"
                android:layout_marginTop="16dp"
                android:text="@string/user_account_confirmation_email" />

            <EditText
                android:id="@+id/user_reset_password_via_email_email_editText"
                style="@style/Eni.Login.EditText.Text15sp"
                android:layout_height="@dimen/login_edittext_height"
                android:hint="@string/user_account_confirmation_email"
                android:inputType="textEmailAddress"
                tools:ignore="TextFields" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/login_login_button_margin_top"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/user_reset_password_via_email_send_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/history_frame_margin"
                android:layout_marginLeft="@dimen/history_frame_margin"
                android:layout_marginRight="@dimen/history_frame_margin"
                android:layout_marginStart="@dimen/history_frame_margin"
                android:layout_marginTop="8dp"
                android:foreground="@drawable/button_foreground">

                <Button
                    android:id="@+id/user_reset_password_via_email_send_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/top_apply_for_prepayment_height"
                    android:layout_gravity="center"
                    android:background="@drawable/button_user_update_information_update"
                    android:clickable="false"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/user_reset_password_via_email_send"
                    android:textColor="@color/white" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/payment_frame_margin"
                android:includeFontPadding="false"
                android:text="@string/login_copyright"
                android:textSize="@dimen/text_10sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
