<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical"
    tools:context="com.neolab.enigma.fragment.history.HistoryPaymentThisMonthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/payment_frame_margin"
        android:background="@drawable/layout_white_background"
        android:orientation="vertical"
        android:padding="@dimen/payment_sub_frame_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image_dsc"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/complete_withdraw_payment_we_withdrew_the_prepayment"
            android:textColor="@color/black"
            android:textSize="@dimen/text_13sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:foreground="@drawable/button_foreground"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/complete_withdraw_payment_top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/payment_frame_margin"
            android:foreground="@drawable/button_foreground">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_apply_for_prepayment_height"
                android:layout_gravity="center"
                android:background="@drawable/button_payment_complete_withdraw_payment_top"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/item_top"
                android:textColor="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:includeFontPadding="false"
            android:text="@string/login_copyright"
            android:textSize="@dimen/text_10sp" />
    </LinearLayout>

</FrameLayout>
